// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applications representations GET /applications-service/:caseId/relevant-representations should render the page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="top-errors-hook" role="alert"></div>
    <div class="govuk-grid-row govuk-!-padding-top-9 govuk-!-padding-bottom-2 govuk-!-margin-left-0 govuk-!-margin-bottom-7 pins-masthead-summary">
        <div class="govuk-grid-column-full">
            <h4 class="govuk-heading-m"> mock reference </h4>
            <h1 class="govuk-heading-xl">mock title</h1>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full govuk-body">,
                    <br>
                    <br><strong class="govuk-tag govuk-tag-- pins-tag--no-max-width">in test</strong>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title"
    data-module="govuk-notification-banner" id="unpublished-changes-banner">
        <div class="govuk-notification-banner__header">
            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title"> Important</h2>
        </div>
        <div class="govuk-notification-banner__content">
            <p class="govuk-notification-banner__heading">Changes have been made. These changes have not been published.</p>
            <p class="govuk-body"><a class="govuk-notification-banner__link" href="/applications-service/case/1/relevant-representations/select-representations-for-publishing"> Preview and publish the changes</a>
            </p><a href="#" id="clear-update-notification-link" class="govuk-link">Clear notification</a>
        </div>
    </div>
    <script nonce="EdcOUaJ8lczj9tIPO0lPow==">
        document.getElementById('clear-update-notification-link').addEventListener('click', (e) => {
        				e.preventDefault()
        				document.getElementById('unpublished-changes-banner').style.display = 'none'
        			});
    </script>
    <h2 class="govuk-heading-l">Relevant representations</h2>
    <form method="GET" action="/applications-service/case/1/relevant-representations">
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-two-thirds">
                <div class="pins-masthead-summary govuk-!-padding-4 govuk-!-margin-bottom-4">
                    <div class="govuk-form-group">
                        <div class="filter-box">
                            <div class="govuk-form-group">
                                <fieldset class="govuk-fieldset">
                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Filter</legend>
                                    <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters" name="filters" type="checkbox"
                                            value="AWAITING_REVIEW">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters">Awaiting review (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-2" name="filters" type="checkbox"
                                            value="VALID">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-2">Valid (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-3" name="filters" type="checkbox"
                                            value="DRAFT">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-3">Draft (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-4" name="filters" type="checkbox"
                                            value="PUBLISHED">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-4">Published (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-5" name="filters" type="checkbox"
                                            value="REFERRED">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-5">Referred (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-6" name="filters" type="checkbox"
                                            value="WITHDRAWN">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-6">Withdrawn (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-7" name="filters" type="checkbox"
                                            value="INVALID">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-7">Invalid (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-8" name="filters" type="checkbox"
                                            value="UNDER_18">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-8">Under 18 (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-9" name="filters" type="checkbox"
                                            value="WITH_ATTACHMENT">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-9">With attachment (3)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-10" name="filters"
                                            type="checkbox" value="UNPUBLISHED">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-10">Unpublished (0)</label>
                                        </div>
                                    </div>
                                </fieldset>
                            </div>
                        </div>
                    </div>
                    <div class="govuk-button-group govuk-!-margin-top-0">
                        <button class="govuk-button" id="toggleButton" data-module="govuk-button">Apply filters</button><a href="/applications-service/case/1/relevant-representations"
                        class="govuk-link govuk-link--no-visited-state"> Clear filters</a>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-column-one-third">
                <h3 class="govuk-heading-m govuk-!-margin-bottom-6"> Key dates</h3>
                <p class="govuk-body govuk-!-margin-bottom-1"><strong>1 January 2023</strong>
                </p>
                <p class="govuk-body govuk-!-margin-bottom-6">Closed date</p>
                <p class="govuk-body govuk-!-margin-bottom-1"><strong> 20 January 2023</strong>
                </p>
                <p class="govuk-body govuk-!-margin-bottom-6">Target date for review and completion</p><a href="/applications-service/case/1/relevant-representations/contact-details?repType=represented"
                role="button" draggable="false" class="govuk-button govuk-button--secondary"
                data-module="govuk-button"> Add a representation</a>
                <p class="govuk-body"><a class="govuk-link" href="/applications-service/case/1/relevant-representations/select-representations-for-publishing">View publishing queue</a>
                </p>
                <p class="govuk-body"><a class="govuk-link" href="/applications-service/case/1/relevant-representations/unpublish-representations"> Unpublish all published representations</a>
                </p>
                <p class="govuk-body"><a class="govuk-link" href="/applications-service/case/1/relevant-representations/api/download/published"
                    download> Download mailing list (CSV)</a>
                </p>
                <p class="govuk-body"><a class="govuk-link" href="/applications-service/case/1/relevant-representations/api/download/valid"
                    download> Download valid representations (CSV)</a>
                </p>
            </div>
        </div>
        <h3 class="govuk-heading-m">Search representations</h3>
        <input type="hidden" name="page" value="1">
        <input type="hidden" name="pageSize" value="25">
        <input type="hidden" name="sortBy" value="">
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-one-half">
                <div class="govuk-form-group">
                    <input class="govuk-input" id="searchTerm" name="searchTerm" type="text">
                </div>
            </div>
            <div class="govuk-grid-column-one-half">
                <button value="updated" type="submit" name="searchUpdated" class="govuk-button govuk-button--secondary"
                data-module="govuk-button">Search</button>
            </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-one-half">
                <p>Showing<b>1</b> to <b>3</b> of <b>3</b> results</p>
            </div>
            <div class="govuk-grid-column-one-half text-align--right">
                <p><span class="govuk-!-margin-right-2"><strong>Results per page</strong></span>
                    <span                     class="govuk-!-margin-left-1"><a class="govuk-link" href="relevant-representations?page=1&amp;pageSize=25"><span class="govuk-visually-hidden">View </span>25<span class="govuk-visually-hidden"> results per page</span></a>
                        </span><span class="govuk-!-margin-left-1">|</span><span class="govuk-!-margin-left-1"><a class="govuk-link" href="relevant-representations?page=1&amp;pageSize=50"><span class="govuk-visually-hidden">View </span>50
                        <span                         class="govuk-visually-hidden">results per page</span>
                            </a>
                            </span><span class="govuk-!-margin-left-1">|</span><span class="govuk-!-margin-left-1"><a class="govuk-link" href="relevant-representations?page=1&amp;pageSize=100"><span class="govuk-visually-hidden">View </span>100
                            <span                             class="govuk-visually-hidden">results per page</span>
                                </a>
                                </span>
                </p>
            </div>
        </div>
        <table id="rr-table" class="govuk-table pins-table--representations">
            <thead class="govuk-table__head">
                <tr class="govuk-table__row">
                    <th scope="col" class="govuk-table__header"><a href="relevant-representations?page=1&amp;sortBy=reference#rr-table"
                        class="sort-table__link "> Reference<span class="sort-table__link-icon  sort-table__link-icon--small "></span></a>
                    </th>
                    <th scope="col" class="govuk-table__header"><a href="relevant-representations?page=1&amp;sortBy=displayName#rr-table"
                        class="sort-table__link "> From<span class="sort-table__link-icon  sort-table__link-icon--small "></span></a>
                    </th>
                    <th scope="col" class="govuk-table__header"><a href="relevant-representations?page=1&amp;sortBy=received#rr-table"
                        class="sort-table__link "> Date received<span class="sort-table__link-icon  sort-table__link-icon--small "></span></a>
                    </th>
                    <th scope="col" class="govuk-table__header"><a href="relevant-representations?page=1&amp;sortBy=redacted#rr-table"
                        class="sort-table__link "> Redacted<span class="sort-table__link-icon  sort-table__link-icon--small "></span></a>
                    </th>
                    <th scope="col" class="govuk-table__header"><a href="relevant-representations?page=1&amp;sortBy=status#rr-table" class="sort-table__link "> Status<span class="sort-table__link-icon  sort-table__link-icon--small "></span></a>
                    </th>
                    <th scope="col" class="govuk-table__header">Action</th>
                </tr>
            </thead>
            <tbody class="govuk-table__body">
                <tr class="govuk-table__row">
                    <td class="govuk-table__cell">mock reference</td>
                    <td class="govuk-table__cell">org name 1</td>
                    <td class="govuk-table__cell">01 Jan 2022</td>
                    <td class="govuk-table__cell">Redacted</td>
                    <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey" id="list-convictions-status-1">Awaiting review</strong>
                    </td>
                    <td class="govuk-table__cell"><a class="govuk-link" href="/applications-service/case/1/relevant-representations/1/representation-details?repMode=summary"> Review <span class="govuk-visually-hidden">org name 1</span></a>
                    </td>
                </tr>
                <tr class="govuk-table__row">
                    <td class="govuk-table__cell">mock reference</td>
                    <td class="govuk-table__cell">first lastName</td>
                    <td class="govuk-table__cell">01 Jan 2022</td>
                    <td class="govuk-table__cell">Unredacted</td>
                    <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green" id="list-convictions-status-2">Valid</strong>
                    </td>
                    <td class="govuk-table__cell"><a class="govuk-link" href="/applications-service/case/1/relevant-representations/2/representation-details?repMode=summary"> Review <span class="govuk-visually-hidden">first lastName</span></a>
                    </td>
                </tr>
                <tr class="govuk-table__row">
                    <td class="govuk-table__cell">mock reference</td>
                    <td class="govuk-table__cell">org name 2</td>
                    <td class="govuk-table__cell">01 Jan 2022</td>
                    <td class="govuk-table__cell">Unredacted</td>
                    <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green" id="list-convictions-status-3">Published</strong>
                    </td>
                    <td class="govuk-table__cell"><a class="govuk-link" href="/applications-service/case/1/relevant-representations/3/representation-details?repMode=summary"> Review <span class="govuk-visually-hidden">org name 2</span></a>
                    </td>
                </tr>
            </tbody>
        </table>
    </form>
</main>"
`;

exports[`applications representations GET /applications-service/:id/relevant-representations with a search term should render the page with search term 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="top-errors-hook" role="alert"></div>
    <div class="govuk-grid-row govuk-!-padding-top-9 govuk-!-padding-bottom-2 govuk-!-margin-left-0 govuk-!-margin-bottom-7 pins-masthead-summary">
        <div class="govuk-grid-column-full">
            <h4 class="govuk-heading-m"> mock reference </h4>
            <h1 class="govuk-heading-xl">mock title</h1>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full govuk-body">,
                    <br>
                    <br><strong class="govuk-tag govuk-tag-- pins-tag--no-max-width">in test</strong>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title"
    data-module="govuk-notification-banner" id="unpublished-changes-banner">
        <div class="govuk-notification-banner__header">
            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title"> Important</h2>
        </div>
        <div class="govuk-notification-banner__content">
            <p class="govuk-notification-banner__heading">Changes have been made. These changes have not been published.</p>
            <p class="govuk-body"><a class="govuk-notification-banner__link" href="/applications-service/case/1/relevant-representations/select-representations-for-publishing"> Preview and publish the changes</a>
            </p><a href="#" id="clear-update-notification-link" class="govuk-link">Clear notification</a>
        </div>
    </div>
    <script nonce="EdcOUaJ8lczj9tIPO0lPow==">
        document.getElementById('clear-update-notification-link').addEventListener('click', (e) => {
        				e.preventDefault()
        				document.getElementById('unpublished-changes-banner').style.display = 'none'
        			});
    </script>
    <h2 class="govuk-heading-l">Relevant representations</h2>
    <form method="GET" action="/applications-service/case/1/relevant-representations">
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-two-thirds">
                <div class="pins-masthead-summary govuk-!-padding-4 govuk-!-margin-bottom-4">
                    <div class="govuk-form-group">
                        <div class="filter-box">
                            <div class="govuk-form-group">
                                <fieldset class="govuk-fieldset">
                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Filter</legend>
                                    <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters" name="filters" type="checkbox"
                                            value="AWAITING_REVIEW">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters">Awaiting review (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-2" name="filters" type="checkbox"
                                            value="VALID">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-2">Valid (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-3" name="filters" type="checkbox"
                                            value="DRAFT">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-3">Draft (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-4" name="filters" type="checkbox"
                                            value="PUBLISHED">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-4">Published (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-5" name="filters" type="checkbox"
                                            value="REFERRED">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-5">Referred (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-6" name="filters" type="checkbox"
                                            value="WITHDRAWN">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-6">Withdrawn (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-7" name="filters" type="checkbox"
                                            value="INVALID">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-7">Invalid (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-8" name="filters" type="checkbox"
                                            value="UNDER_18">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-8">Under 18 (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-9" name="filters" type="checkbox"
                                            value="WITH_ATTACHMENT">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-9">With attachment (0)</label>
                                        </div>
                                        <div class="govuk-checkboxes__item">
                                            <input class="govuk-checkboxes__input" id="filters-10" name="filters"
                                            type="checkbox" value="UNPUBLISHED">
                                            <label class="govuk-label govuk-checkboxes__label" for="filters-10">Unpublished (0)</label>
                                        </div>
                                    </div>
                                </fieldset>
                            </div>
                        </div>
                    </div>
                    <div class="govuk-button-group govuk-!-margin-top-0">
                        <button class="govuk-button" id="toggleButton" data-module="govuk-button">Apply filters</button><a href="/applications-service/case/1/relevant-representations"
                        class="govuk-link govuk-link--no-visited-state"> Clear filters</a>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-column-one-third">
                <h3 class="govuk-heading-m govuk-!-margin-bottom-6"> Key dates</h3>
                <p class="govuk-body govuk-!-margin-bottom-1"><strong>1 January 2023</strong>
                </p>
                <p class="govuk-body govuk-!-margin-bottom-6">Closed date</p>
                <p class="govuk-body govuk-!-margin-bottom-1"><strong> 20 January 2023</strong>
                </p>
                <p class="govuk-body govuk-!-margin-bottom-6">Target date for review and completion</p><a href="/applications-service/case/1/relevant-representations/contact-details?repType=represented"
                role="button" draggable="false" class="govuk-button govuk-button--secondary"
                data-module="govuk-button"> Add a representation</a>
                <p class="govuk-body"><a class="govuk-link" href="/applications-service/case/1/relevant-representations/select-representations-for-publishing">View publishing queue</a>
                </p>
                <p class="govuk-body"><a class="govuk-link" href="/applications-service/case/1/relevant-representations/api/download/published"
                    download> Download mailing list (CSV)</a>
                </p>
                <p class="govuk-body"><a class="govuk-link" href="/applications-service/case/1/relevant-representations/api/download/valid"
                    download> Download valid representations (CSV)</a>
                </p>
            </div>
        </div>
        <h3 class="govuk-heading-m">Search representations</h3>
        <input type="hidden" name="page" value="1">
        <input type="hidden" name="pageSize" value="25">
        <input type="hidden" name="sortBy" value="">
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-one-half">
                <div class="govuk-form-group">
                    <input class="govuk-input" id="searchTerm" name="searchTerm" type="text"
                    value="mock-search-term">
                </div>
            </div>
            <div class="govuk-grid-column-one-half">
                <button value="updated" type="submit" name="searchUpdated" class="govuk-button govuk-button--secondary"
                data-module="govuk-button">Search</button>
            </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-one-half">
                <p>Showing<b>1</b> to <b>3</b> of <b>3</b> results</p>
            </div>
            <div class="govuk-grid-column-one-half text-align--right">
                <p><span class="govuk-!-margin-right-2"><strong>Results per page</strong></span>
                    <span                     class="govuk-!-margin-left-1"><a class="govuk-link" href="relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;pageSize=25"><span class="govuk-visually-hidden">View </span>25<span class="govuk-visually-hidden"> results per page</span></a>
                        </span><span class="govuk-!-margin-left-1">|</span><span class="govuk-!-margin-left-1"><a class="govuk-link" href="relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;pageSize=50"><span class="govuk-visually-hidden">View </span>50
                        <span                         class="govuk-visually-hidden">results per page</span>
                            </a>
                            </span><span class="govuk-!-margin-left-1">|</span><span class="govuk-!-margin-left-1"><a class="govuk-link" href="relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;pageSize=100"><span class="govuk-visually-hidden">View </span>100
                            <span                             class="govuk-visually-hidden">results per page</span>
                                </a>
                                </span>
                </p>
            </div>
        </div>
        <table id="rr-table" class="govuk-table pins-table--representations">
            <thead class="govuk-table__head">
                <tr class="govuk-table__row">
                    <th scope="col" class="govuk-table__header"><a href="relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;sortBy=reference#rr-table"
                        class="sort-table__link "> Reference<span class="sort-table__link-icon  sort-table__link-icon--small "></span></a>
                    </th>
                    <th scope="col" class="govuk-table__header"><a href="relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;sortBy=displayName#rr-table"
                        class="sort-table__link "> From<span class="sort-table__link-icon  sort-table__link-icon--small "></span></a>
                    </th>
                    <th scope="col" class="govuk-table__header"><a href="relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;sortBy=received#rr-table"
                        class="sort-table__link "> Date received<span class="sort-table__link-icon  sort-table__link-icon--small "></span></a>
                    </th>
                    <th scope="col" class="govuk-table__header"><a href="relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;sortBy=redacted#rr-table"
                        class="sort-table__link "> Redacted<span class="sort-table__link-icon  sort-table__link-icon--small "></span></a>
                    </th>
                    <th scope="col" class="govuk-table__header"><a href="relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;sortBy=status#rr-table"
                        class="sort-table__link "> Status<span class="sort-table__link-icon  sort-table__link-icon--small "></span></a>
                    </th>
                    <th scope="col" class="govuk-table__header">Action</th>
                </tr>
            </thead>
            <tbody class="govuk-table__body">
                <tr class="govuk-table__row">
                    <td class="govuk-table__cell">mock reference</td>
                    <td class="govuk-table__cell">org name 1</td>
                    <td class="govuk-table__cell">01 Jan 2022</td>
                    <td class="govuk-table__cell">Redacted</td>
                    <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey" id="list-convictions-status-1">Awaiting review</strong>
                    </td>
                    <td class="govuk-table__cell"><a class="govuk-link" href="/applications-service/case/1/relevant-representations/1/representation-details?repMode=summary"> Review <span class="govuk-visually-hidden">org name 1</span></a>
                    </td>
                </tr>
            </tbody>
        </table>
    </form>
</main>"
`;
